src/main/java/antlr4/com/thecodecache/labs/g4/Calculator.g4
// Simple add/sub/mul/div/modulo with JavaScript precidence and paren grouping.
// Compbined parser and lexer.

grammar Calculator;

@header{
package com.thecodecache.labs.codegen.calculator;
}

// parser

start : expr | <EOF> ;

expr  : '-' expr         # UMINUS
      | expr mulop expr  # MULOPGRP
      | expr addop expr  # ADDOPGRP
      | '(' expr ')'     # PARENGRP
      | NUMBER           # DOUBLE
      ;

addop : '+' | '-' ;

mulop : '*' | '/' | '%' ;

// lexer

NUMBER : ('0' .. '9') + ('.' ('0' .. '9') +)? ;

WS : [ \r\n\t] + -> skip ;
